<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.krnelx</groupId>
  <artifactId>DBJapaneseguide</artifactId>
  <version>1.0-SNAPSHOT</version>
  <properties>
    <maven.compiler.source>22</maven.compiler.source>
    <maven.compiler.target>22</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <dependencies>
    <!--  https://mvnrepository.com/artifact/org.springframework/spring-context  -->
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>6.1.6</version>
    </dependency>
    <!--  https://mvnrepository.com/artifact/jakarta.annotation/jakarta.annotation-api  -->
    <dependency>
      <groupId>jakarta.annotation</groupId>
      <artifactId>jakarta.annotation-api</artifactId>
      <version>3.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-reload4j</artifactId>
      <version>2.0.13</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.13</version>
      <scope>compile</scope>
    </dependency>
    <!--  https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api  -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.11.0-M1</version>
      <scope>test</scope>
    </dependency>
    <!--  https://mvnrepository.com/artifact/org.postgresql/postgresql  -->
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.7.3</version>
    </dependency>
    <!--  https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api  -->
    <dependency>
      <groupId>jakarta.validation</groupId>
      <artifactId>jakarta.validation-api</artifactId>
      <version>3.1.0-M2</version>
    </dependency>
    <dependency>
      <groupId>com.password4j</groupId>
      <artifactId>password4j</artifactId>
      <version>1.8.2</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.angus</groupId>
      <artifactId>jakarta.mail</artifactId>
      <version>2.0.3</version>
    </dependency>
    <dependency>
      <groupId>org.hibernate.validator</groupId>
      <artifactId>hibernate-validator</artifactId>
      <version>8.0.1.Final</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.expressly</groupId>
      <artifactId>expressly</artifactId>
      <version>5.0.0</version>
    </dependency>
    <!--  https://mvnrepository.com/artifact/org.openjfx/javafx-controls  -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>22.0.1</version>
    </dependency>
    <!--  https://mvnrepository.com/artifact/org.openjfx/javafx-fxml  -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>22.0.1</version>
    </dependency>
    <dependency>
      <groupId>io.github.mkpaz</groupId>
      <artifactId>atlantafx-base</artifactId>
      <version>2.0.1</version>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>22</source>
          <target>22</target>
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <configuration>
          <mainClass>com.krnelx.presentation.Runner</mainClass>
          <options>
            <option>--enable-preview</option>
          </options>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>